--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
+    "netlify-cli": "^8.8.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -27,6 +28,9 @@
       "react-app/jest"
     ]
   },
+  "resolutions": {
+    "mini-css-extract-plugin": "2.4.5"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -38,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "mini-css-extract-plugin": "2.4.5"
   }
 }
